--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>X-project</title>
 </head>
 <body>
+    <h1>rin update</h1>
     <img src="http://placehold.it/900x400" alt="這裡有一張圖片">
 </body>
 </html>
